# structured-script

./: .gitignore  Changelog.md  Guardfile  LICENSE  README.md  cabal.config  circle.yml  stack.yaml  structured-script-lang.cabal
docs/: languageDefinition.epub  languageDefinition.html  languageDefinition.html~  languageDefinition.md  languageDefinition.txt  languageDefinition.txt~
src/: Main.hs
src/Language/: #StructuredScript.hs#  .#StructuredScript.hs  StructuredScript.hs
src/Language/StructuredScript/: Internal.hs  Parsers.hs  Parsers.hs~
test/Language/: StructuredScriptSpec.hs
test/Language/StructuredScript/: ParsersSpec.hs
