
Name:                   structured-script-lang
Version:                0.1.6
Author:                 Scott Murphy<scottmurphy09@gmail.com>
Maintainer:             Scott Murphy<scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Structured Script package from plow
Description:            structrued script lang from plow
Cabal-Version:          >= 1.8
Build-Type:             Simple

Library
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Language.StructuredScript
                        Language.StructuredScript.Parsers

  Other-Modules:        Language.StructuredScript.Internal
  Build-Depends:         base                     >= 4         &&   < 5
                       , classy-prelude           >= 0.5.6     &&   < 0.5.11
                       , transformers             >= 0.3.0.0
                       , parsec                   >= 3.1.3     &&   < 3.2.0
                       , vector                   >= 0.10.9.1
                       , unordered-containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
                        ,src    
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , classy-prelude
                      , transformers         
                      , parsec               
                      , vector               
                      , unordered-containers


Executable structured-script-lang
    main-is:            Main.hs
    HS-Source-Dirs:     src
    build-depends:      base
                      , classy-prelude
                                          
    ghc-options:      -threaded -O2 -rtsopts

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/structured-script
