
Name:                   structured-script-lang
Version:                0.3.0
Author:                 Scott Murphy<scottmurphy09@gmail.com>
Maintainer:             Scott Murphy<scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Structured Script package from plow
Description:            structrued script lang from plow
Cabal-Version:          >= 1.8
Build-Type:             Simple

Library
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Language.StructuredScript
                        Language.StructuredScript.Parsers

  Other-Modules:        Language.StructuredScript.Internal
  Build-Depends:         base                  >= 4         &&   < 5
                       , classy-prelude           
                       , transformers 
                       , parsec       
                       , vector       
                       , unordered-containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
                        ,src    
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base                   >= 4         &&   < 5
                      , hspec
                      , classy-prelude
                      , transformers         
                      , parsec               
                      , vector               
                      , unordered-containers


Executable structured-script-lang
    main-is:            Main.hs
    HS-Source-Dirs:     src
    build-depends:      base                   >= 4         &&   < 5
                      , classy-prelude
                                          
    ghc-options:      -threaded -O2 -rtsopts

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/structured-script
